fix:submenu to visible on hover

--- a/src/styles/_site-navbar.scss
+++ b/src/styles/_site-navbar.scss
@@ -80,6 +80,7 @@
           margin-left: 0px;
           background: $white;
           transition: 0.2s 0s;
+          z-index: 9;
 
           &.arrow-top {
             position: absolute;
